# DynaPlex

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets_backup.json  basic.py  exeWrapper.scr  licence  loadmodules.scr  ppo_model.json  ppo_model.pth  readme.md
DynaPlex/: CMakeLists.txt
DynaPlex/mdp_interface/: CMakeLists.txt
DynaPlex/mdp_interface/include/: MdpInterface.h
DynaPlex/mdp_opt/: CMakeLists.txt  LibraryComponent.cpp
DynaPlex/mdp_opt/include/: LibraryComponent.h
Examples/Example/: CMakeLists.txt  test.cpp
Examples/Example/include/: MDP_Implementation.h
docs/: .readthedocs.yaml  CODEOWNERS  Makefile  README.md  add_executable.md  adding_models.md  adding_models_2.md  build_docs.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/algorithms/: algorithms.rst
docs/source/community/: contributing.rst  getting_help.rst
docs/source/examples/: examples.rst
docs/source/faq/: faq.rst
docs/source/getting_started/: adding_executable.rst  adding_model.rst  conda.rst  evaluate.rst  hpc.rst  installation.rst  introduction_to_mdp.rst  testing.rst
docs/source/legacy/: legacy.rst
docs/source/reference/: api_refs.rst  dcl_api.rst  event.rst  model_ref.rst  models_api.rst  policy_ref.rst
docs/source/source/: conf.py  index.rst
docs/source/source/algorithms/: algorithms.rst
docs/source/source/faq/: faq.rst
docs/source/source/getting_started/: adding_executable.rst  adding_model.rst  conda.rst  evaluate.rst  hpc.rst  installation.rst  introduction_to_mdp.rst
docs/source/source/legacy/: legacy.rst
docs/source/source/reference/: exact_ref.rst  mdp.rst  state.rst  tester.rst
docs/source/source/tutorial/: python.rst
docs/source/tutorial/: adding_mdp.rst  airplane_mdp.rst  policy.rst  setup.rst  testing_running.rst
mdp_opt/: CMakeLists.txt  lib.cpp
mdp_opt/include/: LibraryComponent.h  lib.h
src/Examples/Example/: CMakeLists.txt  MDP_Implementation.cpp  main.cpp  test.cpp
src/Examples/Example/include/: MDP_Implementation.h
src/Executable_Tests/ParamsTests/: CMakeLists.txt  SomeClass.cpp  SomeClass.h
src/examples/foreach_example/: CMakeLists.txt  main.cpp  mdp_implementation.cpp
src/examples/memory_checks/: CMakeLists.txt  main.cpp
src/executables/: CMakeLists.txt
src/executables/binpacking_evaluate/: CMakeLists.txt  binpacking_evaluate.cpp
src/executables/collaborative_picking/: CMakeLists.txt  collaborative_picking.cpp
src/executables/dcl_example/: dcl_example.cpp
src/executables/dvrp/: CMakeLists.txt  executable_dvrp.cpp
src/executables/executable_dual_sourcing/: CMakeLists.txt  executable_dual_sourcing.cpp
src/executables/executable_example/: CMakeLists.txt  executable_example.cpp
src/executables/executable_order_picking/: CMakeLists.txt  executable_order_picking.cpp
src/executables/iterative_procedure/: CMakeLists.txt  iterative_procedure.cpp
src/executables/lostsales_evaluate/: CMakeLists.txt  lostsales_evaluate.cpp
src/executables/lostsales_paper_results/: CMakeLists.txt  lostsales_paper_results.cpp
src/executables/memory_checks/: memory_checks.cpp
src/executables/mpi_tests/: CMakeLists.txt
src/executables/perishables_paper_results/: CMakeLists.txt  perishables_paper_results.cpp
src/executables/resource_allocation/: CMakeLists.txt  resource_allocation.cpp
src/lib/bindings/: CMakeLists.txt  PythonBindings.cpp  comparer_bindings.cpp  dcl_bindings.cpp  demonstrator_bindings.cpp  dynaplex_python_bindings.cpp  gym_emulator_bindings.cpp  gymemulator.cpp  gymemulator.h  mdp_bindings.cpp  mdp_numpy_bindings.cpp  policy_bindings.cpp  policy_comparer_bindings.cpp  provider_bindings.cpp  pythonparams.cpp  pythonvargroup.cpp  sample_generator_bindings.cpp  state_bindings.cpp  trajectory_bindings.cpp  vargroupcaster.h
src/lib/bindings/include/dynaplex/: pybind11_json.h  pythonparams.h  pythonvargroup.h
src/lib/core/: CMakeLists.txt  factories.cpp  parallel_execute.cpp  params.cpp  registry.cpp  rng.cpp  rngprovider.cpp  simple.cpp  statisticskeeper.cpp  system.cpp  systeminfo.cpp  trajectory.cpp  utilities.cpp  vargroup.cpp
src/lib/core/include/dynaplex/: dynaplex_model_includes.h  error.h  factories.h  features.h  mdp.h  mdpadapter.h  parallel_execute.h  (+18 more)
src/lib/core/nlohmann/: json_fwd.h
src/lib/core/pybind11_json/: pybind11_json.h
src/lib/core/vargroup/: picosha2.h  vargroup_helpers.cpp  vargroup_helpers.h  vargroup_private_support_funcs.cpp  vargroup_private_support_funcs.h
src/lib/dp/: CMakeLists.txt  dummy.cpp  dynaplexprovider.cpp  provider.cpp
src/lib/models/: CMakeLists.txt  factories.cpp  librarycomponent.cpp  mdpregistry.cpp
src/lib/models/mdp_collection/: SomeMDP.cpp  lostsalesMDP.cpp  lostsalesMDP.h
src/lib/models/mdp_instances/: lostsalesMDP.cpp
src/lib/models/modelling/: discretedist.cpp  graph.cpp  jointdiscretedist.cpp
src/lib/models/modelling_helpers/: discretedist.cpp
src/lib/models/models/: registrationmanager.cpp
src/lib/nn/: CMakeLists.txt  neuralnetworkprovider.cpp  neuralnetworkprovider.h  neuralnetworks.cpp  neuralnetworktrainer.cpp  nn_policy.cpp  nn_policy.h  policytrainer.cpp  sample.cpp  sampledata.cpp  torchavailability.cpp  torchscriptwrapper.h  trainedpolicyprovider.cpp
src/lib/optimal/: CMakeLists.txt
src/tests/ParamsTests/: CMakeLists.txt  NestedClass.cpp  NestedClass.h  main.cpp
src/tests/auto_tests/: CMakeLists.txt  InitiateClassWithVarGroup.cpp  ModelFactoryTests.cpp  VarGroupBasics.cpp  VarGroupTests.cpp  main.cpp  modelfactory.cpp  register_additional_MDP.cpp  t_discretedist.cpp  t_initiateclasswithvargroup.cpp  t_mdp_actions.cpp  t_modelfactory.cpp  t_pytorch.cpp  t_queue.cpp  t_register_additional_MDP.cpp  t_rngprovider.cpp  t_statecategory.cpp  t_vargroup.cpp  useunregisteredmdp.cpp  vargroup.cpp
src/tests/auto_tests/basic_components/: t_discretedist.cpp
src/tests/auto_tests/include/: NestedClass.cpp  NestedClass.h  SomeClass.cpp  SomeClass.h  smallclass.cpp
src/tests/new_tests/: CMakeLists.txt  t_lost_sales.cpp  t_lostsales.cpp  t_some_test.cpp
(+344 files in other folders)
