[tool.poetry]
name = "dynaplex"
version = "1.0"
description = "A software library for solving Markov Decision Problems and similar models."
authors = [
    "Willem van Jaarsveld",
]
license = "MIT"
readme = "README.md"
package-mode = false
exclude = [
    "docs/build",
]

[tool.poetry.dependencies]
python = "^3.9,<4.0"
tomli = "^2.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
nbsphinx = ">=0.8.9"
ipython = ">=8.6.0"
numpydoc = ">=1.5.0"
sphinx-immaterial = ">=0.11.9"
breathe = ">=4.35"
